Added reading list

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: ML Arch
 logo: #
-description: Resources for ML Architecture.
+description: Resources for Software Architecture with Machine Learning Components.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
